grafana+loki/manifests/grafana-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
    name: grafana
    labels:
      koeppster.net/aws_enabled: "true"
