grafana+loki/manifests/box-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: box-event-collector
  namespace: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: box-event-collector
  template:
    metadata:
      labels:
        app: box-event-collector
    spec:
      terminationGracePeriodSeconds: 120
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: collector
          image: 996472359368.dkr.ecr.us-east-1.amazonaws.com/boxevents:1.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          volumeMounts:
            - name: box-config
              mountPath: /var/run/box/box-config.json
              subPath: box-config.json
              readOnly: true
            - name: state
              mountPath: /config
      volumes:
        - name: box-config
          secret:
            secretName: box-jwt
        - name: state
          persistentVolumeClaim:
            claimName: box-collector-pv-claim
