grafana+loki/manifests/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana
spec:
  parentRefs:
  - name: koeppster-lan-gateway
    namespace: infrastructure
  hostnames: ["grafana.k8s.koeppster.lan"]
  rules:
  - backendRefs:
    - name: grafana
      port: 80
