grafana+loki/manifests/loki-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-route
  namespace: grafana
spec:
  parentRefs:
  - name: koeppster-lan-gateway
    namespace: infrastructure
  hostnames: ["loki.k8s.koeppster.lan"]
  rules:
  - backendRefs:
    - name: loki
      port: 3100
